[tool.poetry]
name = "pypkgs_ag"
version = "0.1.0"
description = "Individual Assignment-1 for concatenating categoricals"
authors = ["Aishwarya Gopal <aishwaryagopal12@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
